Network regression discontinuities

--- a/network_regression_discontinuities.ipynb
+++ b/network_regression_discontinuities.ipynb
@@ -1146,7 +1146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a squared term, there is a significant effect of our dummy variable at our policy date but not our random points. Thus we have reason to believe there is a causal relationship between the policy and this metric."
+    "With a squared term, there is a significant effect of our dummy variable at our policy date, but there is also an effect on one of our random points. Thus we cannot conclude that there is a causal relationship between the policy and this metric."
    ]
   },
   {
